--- a/stup/src/main/res/layout/activity_options.xml
+++ b/stup/src/main/res/layout/activity_options.xml
@@ -9,7 +9,7 @@
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_gravity="bottom" >
+        android:layout_gravity="center" >
 
         <LinearLayout
             android:orientation="horizontal"
