--- a/stup/src/main/res/values/colors.xml
+++ b/stup/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <resources>
 
     <color name="black_overlay">#66000000</color>
+    <color name="red_overlay">#ffe51f1f</color>
+    <color name="green_overlay">#ff23a51d</color>
+    <color name="orange_overlay">#ffe5a112</color>
 
 </resources>
